src/test/deca/context/valid/objet/SimpleDeclClass.deca
class Simple{
    int x;
    int y;
    int z;
}
{
    
}