src/test/deca/context/invalid/object/notSubtype.deca
class X
{
  int a;
}
class A
{
  X a(){}
}

class B extends A
{
  A a(){}
}
